improve diagnose and setup scripts, fix health check